modules/sandbox/ext/libriscv/examples/webapi/cpp-httplib/modules/gdscript/tests/scripts/analyzer/errors/cyclic_ref_enum_value.gd
func test():
	print(EV1)

enum {EV1 = EV2}
enum {EV2 = EV1}
